2008-08-12  Mihnea Ovidenie  <mihnea@adobe.com>

        Test for https://bugs.webkit.org/show_bug.cgi?id=19891
        Broken HTML object elements cause de-reference of pointer to freed memory.

        Reviewed by Dave Hyatt and Alexey Proskuryakov.

        * http/tests/misc/object-image-error-with-onload-expected.txt: Added.
        * http/tests/misc/object-image-error-with-onload.html: Added.

2008-08-12  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Eric.

        Fix typo in most files: "mesage" -> "message".
        Remove unused code in SVGTestCase.js

        * svg/dynamic-updates/resources/SVGCircleElement-dom-cx-attr.js:
        * svg/dynamic-updates/resources/SVGCircleElement-dom-cy-attr.js:
        * svg/dynamic-updates/resources/SVGCircleElement-dom-r-attr.js:
        * svg/dynamic-updates/resources/SVGCircleElement-svgdom-cx-prop.js:
        * svg/dynamic-updates/resources/SVGCircleElement-svgdom-cy-prop.js:
        * svg/dynamic-updates/resources/SVGCircleElement-svgdom-r-prop.js:
        * svg/dynamic-updates/resources/SVGClipPathElement-dom-clipPathUnits-attr.js:
        * svg/dynamic-updates/resources/SVGClipPathElement-svgdom-clipPathUnits-prop.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-dom-cx-attr.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-dom-cy-attr.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-dom-rx-attr.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-dom-ry-attr.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-svgdom-cx-prop.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-svgdom-cy-prop.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-svgdom-rx-prop.js:
        * svg/dynamic-updates/resources/SVGEllipseElement-svgdom-ry-prop.js:
        * svg/dynamic-updates/resources/SVGForeignObjectElement-dom-height-attr.js:
        * svg/dynamic-updates/resources/SVGForeignObjectElement-dom-width-attr.js: